--- a/Generics/tsconfig.json
+++ b/Generics/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",                                /* Specify what module code is generated. */
     "rootDir": "./src",                                  /* Specify the root folder within your source files. */
     "outDir": "./dist",                                   /* Specify an output folder for all emitted files. */
-    "strict": false,                                      /* Enable all strict type-checking options. */
+    "strict": true,                                      /* Enable all strict type-checking options. */
     "sourceMap": false,
   }
 }
